--- a/package.json
+++ b/package.json
@@ -9,6 +9,20 @@
   "author": "Daragh Cassidy",
   "license": "ISC",
   "devDependencies": {
-    "font-awesome": "^4.7.0"
+    "bootstrap": "^4.1.1",
+    "font-awesome": "^4.7.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-order": "^1.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.1",
+    "hamburgers": "^0.9.3",
+    "jquery": "^3.3.1",
+    "jshint": "^2.9.5",
+    "popper.js": "^1.14.3"
   }
 }
