--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hamburgers": "^0.9.3",
     "jquery": "^3.3.1",
     "jshint": "^2.9.5",
+    "parsleyjs": "^2.8.1",
     "popper.js": "^1.14.3"
   }
 }
