--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-concat-css": "^3.1.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-jshint": "^2.1.0",
     "gulp-order": "^1.1.1",
